apps/gitea/base/resources/peerauthentication.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: gitea
spec:
  mtls:
    mode: STRICT
