apps/gitea/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    secret.reloader.stakater.com/reload: gitea-admin
  labels:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  name: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea
      app.kubernetes.io/name: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gitea
        app.kubernetes.io/name: gitea
    spec:
      containers:
        - env:
            - name: GITEA_APP_INI
              value: /data/gitea/conf/app.ini
            - name: GITEA_CUSTOM
              value: /data/gitea
            - name: GITEA_TEMP
              value: /tmp/gitea
            - name: GITEA_WORK_DIR
              value: /data
            - name: HOME
              value: /data/gitea/git
            - name: SSH_LISTEN_PORT
              value: !!str 2222
            - name: SSH_PORT
              value: !!str 22
            - name: TMPDIR
              value: /tmp/gitea
          image: docker.gitea.com/gitea:1.25.4-rootless
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          name: gitea
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /tmp
              name: temp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data
        - configMap:
            defaultMode: 365
            name: gitea-init
          name: init
        - emptyDir: {}
          name: temp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea-valkey
  name: gitea-valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea
      app.kubernetes.io/name: gitea-valkey
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gitea
        app.kubernetes.io/name: gitea-valkey
    spec:
      containers:
        - args:
            - --appendonly
            - !!str yes
          image: ghcr.io/valkey-io/valkey:9.0.2
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          name: gitea-valkey
          ports:
            - containerPort: 6379
              name: valkey
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-valkey-data
