apps/gitea/base/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  name: gitea
spec:
  parentRefs:
    - kind: Gateway
      name: traefik
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: gitea-http
          port: 3000
